// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkTableCell should render correctly 1`] = `
<td
  className="bpk-table__cell"
>
  Tabular data
</td>
`;

exports[`BpkTableCell should render correctly with custom class 1`] = `
<td
  className="bpk-table__cell test"
>
  Tabular data
</td>
`;
